--- a/stacks/titanic_model/pipeline.ipynb
+++ b/stacks/titanic_model/pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,17 +172,10 @@
     ") -> str:\n",
     "    from google.cloud import aiplatform\n",
     "    \n",
-    "    data_list = aiplatform.TabularDataset.list(\n",
-    "        filter=f\"display_name={display_name}\"\n",
+    "    data = aiplatform.TabularDataset.create(\n",
+    "        display_name=display_name,\n",
+    "        gcs_source=dataset_artifact.uri\n",
     "    )\n",
-    "    \n",
-    "    if len(data_list) > 0:\n",
-    "        data = data_list[0]\n",
-    "    else:\n",
-    "        data = aiplatform.TabularDataset.create(\n",
-    "            display_name=display_name,\n",
-    "            gcs_source=dataset_artifact.uri\n",
-    "        )\n",
     "        \n",
     "    return data.display_name"
    ]
@@ -196,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -426,17 +419,44 @@
      "output_type": "stream",
      "text": [
       "Creating PipelineJob\n",
-      "PipelineJob created. Resource name: projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241016205924\n",
+      "PipelineJob created. Resource name: projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241017143159\n",
       "To use this PipelineJob in another session:\n",
-      "pipeline_job = aiplatform.PipelineJob.get('projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241016205924')\n",
+      "pipeline_job = aiplatform.PipelineJob.get('projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241017143159')\n",
       "View Pipeline Job:\n",
-      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/titanic-pipeline-20241016205924?project=470842673491\n",
-      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241016205924 current state:\n",
+      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/titanic-pipeline-20241017143159?project=470842673491\n",
+      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241017143159 current state:\n",
       "3\n",
-      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241016205924 current state:\n",
+      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241017143159 current state:\n",
       "3\n",
-      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241016205924 current state:\n",
+      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241017143159 current state:\n",
+      "3\n",
+      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241017143159 current state:\n",
+      "3\n",
+      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241017143159 current state:\n",
+      "3\n",
+      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241017143159 current state:\n",
+      "3\n",
+      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241017143159 current state:\n",
+      "3\n",
+      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241017143159 current state:\n",
+      "3\n",
+      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241017143159 current state:\n",
       "3\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Job failed with:\ncode: 9\nmessage: \" The DAG failed because some tasks failed. The failed tasks are: [train-model].; Job (project_id = pebolas-sandbox, job_id = 5888208847792766976) is failed due to the above error.; Failed to handle the job: {project_number = 470842673491, job_id = 5888208847792766976}\"\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mjob\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.11/site-packages/google/cloud/aiplatform/pipeline_jobs.py:334\u001b[0m, in \u001b[0;36mPipelineJob.run\u001b[0;34m(self, service_account, network, reserved_ip_ranges, sync, create_request_timeout, enable_preflight_validations)\u001b[0m\n\u001b[1;32m    310\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Run this configured PipelineJob and monitor the job until completion.\u001b[39;00m\n\u001b[1;32m    311\u001b[0m \n\u001b[1;32m    312\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    330\u001b[0m \u001b[38;5;124;03m        Optional. Whether to enable preflight validations for the PipelineJob.\u001b[39;00m\n\u001b[1;32m    331\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    332\u001b[0m network \u001b[38;5;241m=\u001b[39m network \u001b[38;5;129;01mor\u001b[39;00m initializer\u001b[38;5;241m.\u001b[39mglobal_config\u001b[38;5;241m.\u001b[39mnetwork\n\u001b[0;32m--> 334\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_run\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    335\u001b[0m \u001b[43m    \u001b[49m\u001b[43mservice_account\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mservice_account\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    336\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnetwork\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnetwork\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    337\u001b[0m \u001b[43m    \u001b[49m\u001b[43mreserved_ip_ranges\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mreserved_ip_ranges\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    338\u001b[0m \u001b[43m    \u001b[49m\u001b[43msync\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msync\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    339\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_request_timeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcreate_request_timeout\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    340\u001b[0m \u001b[43m    \u001b[49m\u001b[43menable_preflight_validations\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43menable_preflight_validations\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    341\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.11/site-packages/google/cloud/aiplatform/base.py:863\u001b[0m, in \u001b[0;36moptional_sync.<locals>.optional_run_in_thread.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    861\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m:\n\u001b[1;32m    862\u001b[0m         VertexAiResourceNounWithFutureManager\u001b[38;5;241m.\u001b[39mwait(\u001b[38;5;28mself\u001b[39m)\n\u001b[0;32m--> 863\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmethod\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    865\u001b[0m \u001b[38;5;66;03m# callbacks to call within the Future (in same Thread)\u001b[39;00m\n\u001b[1;32m    866\u001b[0m internal_callbacks \u001b[38;5;241m=\u001b[39m []\n",
+      "File \u001b[0;32m/usr/local/lib/python3.11/site-packages/google/cloud/aiplatform/pipeline_jobs.py:382\u001b[0m, in \u001b[0;36mPipelineJob._run\u001b[0;34m(self, service_account, network, reserved_ip_ranges, sync, create_request_timeout, enable_preflight_validations)\u001b[0m\n\u001b[1;32m    353\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Helper method to ensure network synchronization and to run\u001b[39;00m\n\u001b[1;32m    354\u001b[0m \u001b[38;5;124;03mthe configured PipelineJob and monitor the job until completion.\u001b[39;00m\n\u001b[1;32m    355\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    372\u001b[0m \u001b[38;5;124;03m        Optional. Whether to enable preflight validations for the PipelineJob.\u001b[39;00m\n\u001b[1;32m    373\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    374\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msubmit(\n\u001b[1;32m    375\u001b[0m     service_account\u001b[38;5;241m=\u001b[39mservice_account,\n\u001b[1;32m    376\u001b[0m     network\u001b[38;5;241m=\u001b[39mnetwork,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    379\u001b[0m     enable_preflight_validations\u001b[38;5;241m=\u001b[39menable_preflight_validations,\n\u001b[1;32m    380\u001b[0m )\n\u001b[0;32m--> 382\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_block_until_complete\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    384\u001b[0m \u001b[38;5;66;03m# AutoSxS view model evaluations\u001b[39;00m\n\u001b[1;32m    385\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m details \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtask_details:\n",
+      "File \u001b[0;32m/usr/local/lib/python3.11/site-packages/google/cloud/aiplatform/pipeline_jobs.py:793\u001b[0m, in \u001b[0;36mPipelineJob._block_until_complete\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    790\u001b[0m \u001b[38;5;66;03m# Error is only populated when the job state is\u001b[39;00m\n\u001b[1;32m    791\u001b[0m \u001b[38;5;66;03m# JOB_STATE_FAILED or JOB_STATE_CANCELLED.\u001b[39;00m\n\u001b[1;32m    792\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_gca_resource\u001b[38;5;241m.\u001b[39mstate \u001b[38;5;129;01min\u001b[39;00m _PIPELINE_ERROR_STATES:\n\u001b[0;32m--> 793\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJob failed with:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_gca_resource\u001b[38;5;241m.\u001b[39merror)\n\u001b[1;32m    794\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    795\u001b[0m     _LOGGER\u001b[38;5;241m.\u001b[39mlog_action_completed_against_resource(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrun\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcompleted\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Job failed with:\ncode: 9\nmessage: \" The DAG failed because some tasks failed. The failed tasks are: [train-model].; Job (project_id = pebolas-sandbox, job_id = 5888208847792766976) is failed due to the above error.; Failed to handle the job: {project_number = 470842673491, job_id = 5888208847792766976}\"\n"
      ]
     }
    ],
@@ -468,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "2.7.undefined"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
